--- a/react-js-setup/package.json
+++ b/react-js-setup/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "react-hello-world",
+  "name": "app",
   "version": "1.0.0",
-  "description": "setup reactjs project",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack -d --watch",
-    "build" : "webpack -p"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "rhenobudiasa@yahoo.com",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "webpack": "^3.1.0"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^3.10.0"
   }
 }
